--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
-    "lenis": "^1.3.17",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
